--- a/2_docker_sql/docker-compose.yaml
+++ b/2_docker_sql/docker-compose.yaml
@@ -9,6 +9,9 @@ services:
       - "./ny_taxi_postgres_data:/var/lib/postgresql/data:rw"
     ports:
       - "5432:5432"
+    networks:
+      - airflow
+
   pgadmin:
     image: dpage/pgadmin4
     environment:
@@ -16,3 +19,11 @@ services:
       - PGADMIN_DEFAULT_PASSWORD=root
     ports:
       - "8080:80"
+    networks:
+      - airflow
+
+# external network from airflow
+networks:
+  airflow:
+    external:
+      name: airflow_default
