--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,12 @@
 2_docker_sql/google-cloud-sdk/
 2_docker_sql/ny_taxi_postgres_data/
 2_docker_sql/terraform/.terraform/
+2_docker_sql/terraform/terraform.tfstate
+2_docker_sql/terraform/terraform.tfstate.backup
+logs/
+plugins/
 .DS_Store
+*.csv
+*.parquet
+*.ipynb_checkpoints
+__pycache__/
