--- a/data_ingestion_airflow_week_2/airflow/.env
+++ b/data_ingestion_airflow_week_2/airflow/.env
@@ -1,8 +1,8 @@
 AIRFLOW_UID=501
 
 # POSTGRES LOCAL
-PG_HOST=postgres
-PG_USER=airflow
-PG_PASSWORD=airflow
+PG_HOST=pgdatabase
+PG_USER=root
+PG_PASSWORD=root
 PG_PORT=5432
-PG_DATABASE=airflow
+PG_DATABASE=ny_taxi
